[metadata]
name = tempest-lib
version = 0.0.2
summary = OpenStack Functional Testing Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    tempest_lib

[entry_points]
console_scripts =
    subunit-trace = tempest_lib.cmd.subunit_trace:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tempest_lib/locale
domain = tempest-lib

[update_catalog]
domain = tempest-lib
output_dir = tempest_lib/locale
input_file = tempest_lib/locale/tempest-lib.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tempest_lib/locale/tempest-lib.pot
